--- a/src/app/actualizar/actualizar.page.html
+++ b/src/app/actualizar/actualizar.page.html
@@ -11,7 +11,7 @@
   <ion-content [fullscreen]="true">
     <ion-header collapse="condense">
       <ion-toolbar>
-        <ion-title size="large">Autor</ion-title>
+        <ion-title size="large">Alumno</ion-title>
       </ion-toolbar>
     </ion-header>
   
