se agrega boton de eliminar y agregar en la pagina actualizar

--- a/src/app/actualizar/actualizar.page.html
+++ b/src/app/actualizar/actualizar.page.html
@@ -42,4 +42,7 @@
       </ion-label>
     </ion-item>
 
+    <ion-button color="success">Actualizar</ion-button>
+    <ion-button color="danger">Eliminar</ion-button>
+
 </ion-content>
