--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Actualizar o Eliminar
+      Agregar
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Actualizar o Eliminar</ion-title>
+      <ion-title size="large">Agregar</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-item>
